; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_ioc_cb.c_bfa_ioc_cb_map_port.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_ioc_cb.c_bfa_ioc_cb_map_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_ioc_s = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_ioc_s*)* @bfa_ioc_cb_map_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_ioc_cb_map_port(%struct.bfa_ioc_s* %0) #0 {
  %2 = alloca %struct.bfa_ioc_s*, align 8
  store %struct.bfa_ioc_s* %0, %struct.bfa_ioc_s** %2, align 8
  %3 = load %struct.bfa_ioc_s*, %struct.bfa_ioc_s** %2, align 8
  %4 = call i32 @bfa_ioc_pcifn(%struct.bfa_ioc_s* %3)
  %5 = load %struct.bfa_ioc_s*, %struct.bfa_ioc_s** %2, align 8
  %6 = getelementptr inbounds %struct.bfa_ioc_s, %struct.bfa_ioc_s* %5, i32 0, i32 0
  store i32 %4, i32* %6, align 4
  %7 = load %struct.bfa_ioc_s*, %struct.bfa_ioc_s** %2, align 8
  %8 = load %struct.bfa_ioc_s*, %struct.bfa_ioc_s** %2, align 8
  %9 = getelementptr inbounds %struct.bfa_ioc_s, %struct.bfa_ioc_s* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @bfa_trc(%struct.bfa_ioc_s* %7, i32 %10)
  ret void
}

declare dso_local i32 @bfa_ioc_pcifn(%struct.bfa_ioc_s*) #1

declare dso_local i32 @bfa_trc(%struct.bfa_ioc_s*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
